--- a/cositas/css/sttf1.css
+++ b/cositas/css/sttf1.css
@@ -13,7 +13,7 @@ html *::before {
 
 .try {
   border: medium solid black;
-  width: 360px;
+  width: 100%;
   height: 70px;
   display: flex;
   overflow-x: scroll;
