--- a/cositas/css/sttf1.scss
+++ b/cositas/css/sttf1.scss
@@ -13,7 +13,7 @@ html{
 }
 .try{
     border: $border-default;
-    width: 360px;
+    width: 100%;
     height: 70px;
     display: flex;
     overflow-x:scroll;
