--- a/cositas/css/sttf1.css
+++ b/cositas/css/sttf1.css
@@ -2,30 +2,100 @@ html {
   box-sizing: border-box;
   font-family: "Arima";
   font-size: 16px;
-  margin: 0;
-  padding: 0;
+  scroll-behavior: smooth;
 }
 html *,
 html *::after,
 html *::before {
   box-sizing: inherit;
 }
+html * {
+  margin: 0;
+  padding: 0;
+}
+html body {
+  min-height: 100vh;
+}
 
-.try {
-  border: medium solid black;
+.header,
+.nav,
+.container {
+  max-width: 100%;
+}
+
+.header {
+  height: 100px;
+  background-image: url(..//assets/pvpzone.png);
+}
+.header img {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 50%;
+     object-position: 0 50%;
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  z-index: 999;
+}
+
+.nav {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: rgb(240, 174, 174);
+  box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
   height: 70px;
   display: flex;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
+  text-align: center;
+  align-items: center;
 }
-.try li {
+.nav > li {
   list-style-type: none;
-  padding: 1rem;
-  width: 100%;
+  padding: 0 20px;
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  z-index: 998;
 }
-.try li a {
+.nav > li a {
   text-decoration: none;
   color: black;
-  padding: 1rem;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+main {
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  background-image: url(..//assets/pvpzone.png);
+  background-position: 50% center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+main .container {
+  border: thin solid black;
+}
+main .card {
+  width: 80vw;
+  height: 80vh;
+  margin: 3rem auto;
+  box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  background-color: rgb(240, 215, 215);
+  position: relative;
+}
+main .card h2 {
+  position: absolute;
+  margin-left: 2.5rem;
+  font-size: 30px;
+  z-index: 998;
+  color: rgb(11, 26, 240);
+  filter: saturate(3);
 }/*# sourceMappingURL=sttf1.css.map */
