--- a/cositas/css/sttf1.scss
+++ b/cositas/css/sttf1.scss
@@ -1,32 +1,96 @@
-$border-default:medium solid black;
+$border-default:thin solid black;
 html{
     box-sizing: border-box;
     font-family: "Arima";
     font-size: 16px;
-    margin: 0;
-    padding: 0;
+    scroll-behavior: smooth;
+   
     *,
     *::after,
     *::before{
         box-sizing: inherit;
     }
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    body{
+        min-height: 100vh;
+    }
 }
-.try{
-    border: $border-default;
-    width: 100%;
+.header,
+.nav,
+.container{
+    max-width: 100%;
+}
+
+.header{
+    height: 100px;
+    background-image: url(..//assets/pvpzone.png);
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 0 50%;
+        backdrop-filter: blur(1px);
+        z-index: 999; 
+    }
+
+}
+.nav{
+    position: sticky;
+    top:0;
+    z-index: 999;
+    background-color: rgb(240, 174, 174);
+    box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
     height: 70px;
     display: flex;
-    overflow-x:scroll;
+    overflow-x: hidden;
     overflow-y: hidden;
-    li{
+    text-align: center;
+    align-items: center;
+    
+    >li{
         list-style-type: none;
-        padding: 1rem;
-        width: 100%;
+        padding: 0 20px;
+        backdrop-filter: blur(1px);
+        z-index: 998;
         a{
             text-decoration: none;
             color: black;
-            padding: 1rem;
-            
+            font-weight: bold;
+            font-size: 20px;
+        }
+    }
+}
+main{
+    width: 100%;
+    min-height: 100vh;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    background-image: url(..//assets/pvpzone.png);
+    background-position: 50% center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    .container{
+        border: $border-default;
+    }
+    .card{
+        width: 80vw;
+        height:80vh;
+        margin: 3rem auto;
+        box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
+        backdrop-filter: blur(3px);
+        background-color: rgb(240, 215, 215);
+        position: relative;
+        h2{
+            position: absolute;
+            margin-left:2.5rem;
+            font-size: 30px;
+            z-index: 998;
+            color: rgb(11, 26, 240);
+            filter: saturate(3);
         }
     }
 
