--- a/cositas/css/sttf1.css
+++ b/cositas/css/sttf1.css
@@ -16,11 +16,20 @@ html * {
 html body {
   min-height: 100vh;
 }
+html body::-webkit-scrollbar {
+  width: 5px;
+  background-color: black;
+}
+html body::-webkit-scrollbar-thumb {
+  background-color: rgb(228, 11, 11);
+  border-radius: 5px;
+}
 
 .header,
 .nav,
 .container {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .header {
@@ -46,12 +55,20 @@ html body {
   z-index: 999;
   background-color: rgb(240, 174, 174);
   box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
-  height: 70px;
+  height: 60px;
   display: flex;
-  overflow-x: hidden;
+  overflow-x: visible;
   overflow-y: hidden;
   text-align: center;
   align-items: center;
+}
+.nav::-webkit-scrollbar {
+  width: 5px;
+  height: 2px;
+}
+.nav::-webkit-scrollbar-thumb {
+  background-color: rgb(228, 11, 11);
+  border-radius: 5px;
 }
 .nav > li {
   list-style-type: none;
@@ -84,18 +101,100 @@ main .container {
 main .card {
   width: 80vw;
   height: 80vh;
-  margin: 3rem auto;
-  box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
+  margin: 4rem auto;
+  box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.6);
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
   background-color: rgb(240, 215, 215);
   position: relative;
+  z-index: 998;
+  perspective: 10rem;
+  transform-style: preserve-3d;
+}
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fadein {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+main .card .fade-in {
+  font-size: 5vw;
+  -webkit-animation: fadein 0.5s infinite alternate;
+          animation: fadein 0.5s infinite alternate;
+}
+main .card svg {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  z-index: 1;
+}
+main .card input[type=checkbox] {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 999;
+  opacity: 0;
+  width: 5rem;
+  height: 5rem;
+  cursor: pointer;
+}
+main .card input[type=checkbox]:checked + .flip-card {
+  transform: rotateY(180deg);
+}
+main .card input[type=checkbox]:checked + .flip-card > h2 {
+  transform: rotateY(-180deg);
 }
 main .card h2 {
   position: absolute;
   margin-left: 2.5rem;
+  margin-top: 1rem;
   font-size: 30px;
   z-index: 998;
-  color: rgb(11, 26, 240);
+  color: rgb(0, 0, 0);
   filter: saturate(3);
+  border-bottom: thin solid black;
+}
+main .card p {
+  text-align: justify;
+  padding: 1rem;
+  font-weight: bold;
+  position: absolute;
+  top: 70px;
+}
+main .card img {
+  position: absolute;
+  bottom: 30%;
+  width: 100%;
+  height: auto;
+}
+main .card .front {
+  transform: rotateY(0deg);
+}
+main .card .back {
+  transform: rotateY(180deg);
+}
+main .flip-card {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 1s ease-in-out;
+  z-index: 1;
+}
+main .flip-card .front,
+main .flip-card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }/*# sourceMappingURL=sttf1.css.map */
