--- a/cositas/css/sttf1.scss
+++ b/cositas/css/sttf1.scss
@@ -16,12 +16,21 @@ html{
     }
     body{
         min-height: 100vh;
+        &::-webkit-scrollbar{
+            width: 5px;
+            background-color: black;
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: rgb(228, 11, 11);
+            border-radius: 5px;
+        }
     }
 }
 .header,
 .nav,
 .container{
     max-width: 100%;
+    max-height: 100%;
 }
 
 .header{
@@ -43,13 +52,20 @@ html{
     z-index: 999;
     background-color: rgb(240, 174, 174);
     box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
-    height: 70px;
+    height: 60px;
     display: flex;
-    overflow-x: hidden;
+    overflow-x: visible;
     overflow-y: hidden;
     text-align: center;
     align-items: center;
-    
+    &::-webkit-scrollbar{
+        width: 5px;
+        height: 2px;
+    }
+    &::-webkit-scrollbar-thumb{
+        background-color: rgb(228, 11, 11);
+        border-radius: 5px;
+    }
     >li{
         list-style-type: none;
         padding: 0 20px;
@@ -77,21 +93,96 @@ main{
         border: $border-default;
     }
     .card{
+        
         width: 80vw;
         height:80vh;
-        margin: 3rem auto;
-        box-shadow: 0.5rem 0.15rem 0.5rem 0.25rem rgba(0, 0, 0, 0.3);
+        margin: 4rem auto;
+        box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.6);
         backdrop-filter: blur(3px);
         background-color: rgb(240, 215, 215);
         position: relative;
+        z-index: 998;
+        perspective: 10rem;
+        transform-style: preserve-3d;
+        @keyframes fadein {
+            0%{
+                opacity: 1;
+            }
+            100%{
+                opacity: 0;
+            }
+        }
+        .fade-in{
+            font-size: 5vw;
+            animation: fadein 0.5s infinite alternate;
+        }
+        svg{
+            position: absolute;
+            bottom: 0;
+            right: 10px;
+            z-index: 1;
+        }
+        input[type="checkbox"]{
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: 999;
+            opacity: 0;
+            width: 5rem;
+            height: 5rem;
+            cursor: pointer;
+            &:checked + .flip-card{
+                transform: rotateY(180deg);
+            }
+            &:checked + .flip-card > h2{
+                transform: rotateY(-180deg);
+            }
+        }
         h2{
             position: absolute;
             margin-left:2.5rem;
+            margin-top: 1rem;
             font-size: 30px;
             z-index: 998;
-            color: rgb(11, 26, 240);
+            color: rgb(0, 0, 0);
             filter: saturate(3);
+            border-bottom: thin solid black;
+           
+
+        }
+        p{
+            text-align: justify;
+            padding: 1rem;
+            font-weight: bold;
+            position: absolute;
+            top: 70px;
+        }
+        img{
+            position: absolute ;
+            bottom: 30%;
+            width: 100%;
+            height: auto;
+        }
+        .front{
+            transform: rotateY(0deg);
+        } 
+        .back{
+            transform: rotateY(180deg);
         }
     }
+    .flip-card{
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        transition: transform 1s ease-in-out;
+	    z-index: 1;
+        .front,
+        .back{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
 
+    }
 }
